--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.1
 phases:
     build:
       commands:
-          -echo "Nothing to do here"
+          echo "Nothing to do here"
 artifacts:
     files:
       index.html
